# ddd-book-manager

./: .env  .test.env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
src/: config.py  exec.py
src/domain/book/: dto.py  model.py  values.py
src/domain/shared/: base.py  values.py
src/entrypoint/web/: app.py  config.py  dependency.py  middleware.py
src/entrypoint/web/endpoint/: book.py
src/entrypoint/web/schema/: list_params.py
src/entrypoint/web/shared/: encoder.py  exceptions.py  parse.py
src/entrypoints/service/excel_parse/: denied_books.py
src/entrypoints/web/: app.py  dependency.py  middleware.py
src/entrypoints/web/endpoints/: book.py
src/entrypoints/web/shared/: parse.py
src/infrastructure/: exceptions.py
src/infrastructure/connector/s3/: service.py
src/infrastructure/connector/sqla/: base.py  config.py  mapper.py
src/infrastructure/connectors/sqla/: base.py  mapper.py
src/infrastructure/repository/: book.py  denied_list.py
src/infrastructure/uow/: base.py  exceptions.py  main.py
src/service/: exceptions.py
src/service/exceptions/: shared.py
tests/: conftest.py
tests/api/book/: test_common.py  test_create.py  test_populate_denied_list.py  test_read.py  test_read_list.py
tests/files/: Test.docx  publisher_decline_list.xlsx  publisher_decline_list_empty.xlsx  publisher_decline_list_no_authors.xlsx
tests/fixtures/: app.py  common.py  database.py
tests/fixtures/db_models/: book.py  denied_list.py
tests/unit/: test_excel_parse.py
tests/utils/: db.py
(+30 files in other folders)
