[tool.poetry]
name = "test-starlab"
version = "0.1.0"
description = "Test task for StarLab"
authors = ["German Golcov <gerleffx2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pydantic = "^2.4.2"
aioboto3 = "^12.0.0"
aiofiles = "^23.2.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
aiohttp-debugtoolbar = "^0.6.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
mypy = "^1.6.1"
flake8 = "^6.1.0"
psycopg2 = "^2.9.9"
pytest-aiohttp = "^1.0.5"


[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
